fix: update page title and remove footer from Top 10 Birds page

--- a/birds/index.html
+++ b/birds/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Top 10 Backyard Birds</title>
+    <title>Top 10 Birds</title>
     <style>
         /* --- CSS STYLES --- */
         :root {
@@ -222,10 +222,6 @@
             </article>
         </div>
     </section>
-
-    <footer>
-        <p>Images via Wikimedia Commons (Public Domain / CC BY)</p>
-    </footer>
 </div>
 
 </body>
