--- a/birds/index.html
+++ b/birds/index.html
@@ -3,39 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 10 Birds</title>
+    <title>Top 10 birds</title>
     <style>
         /* --- CSS STYLES --- */
         :root {
-            --bg-color: #f4f4f9;
+            --primary-dark: #1a472a;
+            --primary-light: #2d7a4a;
+            --accent-warm: #d4a574;
+            --accent-soft: #f5e6d3;
+            --text-dark: #2c3e50;
+            --text-light: #666;
             --card-bg: #ffffff;
-            --text-color: #333;
-            --accent-color: #2c3e50;
+            --bg-gradient-1: #f0f8f4;
+            --bg-gradient-2: #e8f5f0;
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
+            font-family: 'Georgia', 'Segoe UI', serif;
+            background: linear-gradient(135deg, var(--bg-gradient-1) 0%, var(--bg-gradient-2) 100%);
+            background-attachment: fixed;
+            color: var(--text-dark);
             margin: 0;
             padding: 20px;
-            line-height: 1.6;
+            line-height: 1.8;
+            min-height: 100vh;
         }
 
         header {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 50px;
+            padding: 40px 20px;
+            background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary-light) 100%);
+            border-radius: 20px;
+            color: var(--accent-soft);
+            box-shadow: 0 10px 30px rgba(26, 71, 42, 0.2);
         }
 
         h1 {
-            color: var(--accent-color);
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
+            color: var(--accent-warm);
+            font-size: 3rem;
+            margin: 0 0 10px 0;
+            font-weight: normal;
+            letter-spacing: 2px;
         }
 
         p.subtitle {
-            font-size: 1.2rem;
-            color: #666;
+            font-size: 1.3rem;
+            color: var(--accent-soft);
+            margin: 0;
+            font-style: italic;
+            opacity: 0.95;
         }
 
         /* Grid Layout */
@@ -45,78 +62,89 @@
         }
 
         .category-section {
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
         .category-title {
-            font-size: 1.8rem;
-            border-bottom: 2px solid #ddd;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-            color: var(--accent-color);
+            font-size: 2rem;
+            border-bottom: 3px solid var(--accent-warm);
+            border-top: 3px solid var(--accent-warm);
+            padding: 15px 0;
+            margin-bottom: 30px;
+            color: var(--primary-dark);
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            font-weight: normal;
         }
 
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+            gap: 30px;
         }
 
         /* Card Design */
         .card {
             background: var(--card-bg);
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            border-radius: 16px;
+            box-shadow: 0 8px 20px rgba(26, 71, 42, 0.12);
             overflow: hidden;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             display: flex;
             flex-direction: column;
+            border: 2px solid rgba(212, 165, 116, 0.2);
         }
 
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+            transform: translateY(-12px) scale(1.02);
+            box-shadow: 0 16px 40px rgba(26, 71, 42, 0.2);
+            border-color: var(--accent-warm);
         }
 
         .card img {
             width: 100%;
-            height: 200px;
+            height: 220px;
             object-fit: cover;
-            background-color: #e0e0e0;
+            background: linear-gradient(135deg, #e0e0e0 0%, #f0f0f0 100%);
+            cursor: pointer;
+            transition: filter 0.3s ease;
+            display: block;
+        }
+
+        .card img:hover {
+            filter: brightness(1.1) saturate(1.1);
         }
 
         .card-content {
-            padding: 20px;
+            padding: 28px;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
+            background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(245,230,211,0.05) 100%);
         }
 
         .bird-name {
-            font-size: 1.4rem;
-            margin: 0 0 10px 0;
-            color: #2c3e50;
+            font-size: 1.5rem;
+            margin: 0 0 12px 0;
+            color: var(--primary-dark);
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .bird-desc {
             font-size: 0.95rem;
-            color: #555;
+            color: var(--text-light);
+            line-height: 1.7;
+            flex-grow: 1;
         }
 
         footer {
             text-align: center;
-            margin-top: 50px;
-            font-size: 0.8rem;
-            color: #888;
-        }
-
-        /* Image click styling */
-        .card img {
-            cursor: pointer;
-        }
-
-        .card img:hover {
-            opacity: 0.85;
+            margin-top: 60px;
+            padding-top: 30px;
+            font-size: 0.85rem;
+            color: var(--text-light);
+            border-top: 2px solid rgba(212, 165, 116, 0.3);
         }
 
         /* Modal styles */
@@ -129,7 +157,14 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgba(0,0,0,0.8);
+            background-color: rgba(26, 71, 42, 0.95);
+            backdrop-filter: blur(5px);
+            animation: fadeIn 0.3s ease;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         .modal.active {
@@ -142,6 +177,20 @@
             max-width: 90%;
             max-height: 90%;
             object-fit: contain;
+            border-radius: 12px;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+            animation: slideUp 0.3s ease;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         .modal-close {
@@ -150,21 +199,57 @@
             right: 30px;
             font-size: 40px;
             font-weight: bold;
-            color: #fff;
+            color: var(--accent-warm);
             cursor: pointer;
-            background: rgba(0,0,0,0.5);
-            padding: 10px 15px;
-            border-radius: 5px;
+            background: rgba(0,0,0,0.4);
+            padding: 10px 18px;
+            border-radius: 50%;
+            border: 2px solid var(--accent-warm);
+            transition: all 0.2s ease;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 1;
         }
 
         .modal-close:hover {
-            background: rgba(0,0,0,0.7);
+            background: var(--accent-warm);
+            color: var(--primary-dark);
+            transform: scale(1.1);
+        }
+
+        /* Keyboard hint */
+        .modal::after {
+            content: '← Press arrow keys to navigate →';
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: var(--accent-warm);
+            font-size: 0.9rem;
+            opacity: 0.7;
+            font-style: italic;
         }
 
         /* Mobile Adjustments */
         @media (max-width: 600px) {
-            h1 { font-size: 2rem; }
-            .card-grid { grid-template-columns: 1fr; }
+            h1 { 
+                font-size: 2rem; 
+            }
+            .card-grid { 
+                grid-template-columns: 1fr; 
+            }
+            .category-title {
+                font-size: 1.3rem;
+            }
+            header {
+                padding: 20px;
+            }
+            .modal::after {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -172,7 +257,7 @@
 
 <div class="container">
     <header>
-        <h1>Top 10 Birds</h1>
+        <h1>Top 10 birds</h1>
         <p class="subtitle">A curated list of backyard all-stars</p>
     </header>
 
@@ -199,7 +284,7 @@
 
     <!-- GROUP 2: The Winter Guild -->
     <section class="category-section">
-        <h2 class="category-title">The "Winter Guild"</h2>
+        <h2 class="category-title">The Winter Guild</h2>
         <div class="card-grid">
             <article class="card">
                 <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee">
