Rename page from "Top 10 Birds" to "Birds of Port Washington"

--- a/birds/index.html
+++ b/birds/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 10 birds</title>
+    <title>Birds of Port Washington</title>
     <style>
         /* --- CSS STYLES --- */
         :root {
@@ -257,8 +257,8 @@
 
 <div class="container">
     <header>
-        <h1>Top 10 birds</h1>
-        <p class="subtitle">A curated list of backyard all-stars</p>
+        <h1>Birds of Port Washington</h1>
+        <p class="subtitle">A curated guide to our local avian visitors</p>
     </header>
 
     <!-- GROUP 1: Woodpecker Duo -->
