--- a/birds/index.html
+++ b/birds/index.html
@@ -202,7 +202,7 @@
             color: var(--accent-warm);
             cursor: pointer;
             background: rgba(0,0,0,0.4);
-            padding: 10px 18px;
+            padding: 0;
             border-radius: 50%;
             border: 2px solid var(--accent-warm);
             transition: all 0.2s ease;
