--- a/birds/index.html
+++ b/birds/index.html
@@ -75,6 +75,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             font-weight: normal;
+            text-align: center;
         }
 
         .card-grid {
