feat: add scientific names to bird cards and adjust bird name spacing.

--- a/birds/index.html
+++ b/birds/index.html
@@ -129,10 +129,18 @@
 
         .bird-name {
             font-size: 1.5rem;
-            margin: 0 0 12px 0;
+            margin: 0 0 4px 0;
             color: var(--primary-dark);
             font-weight: 600;
             letter-spacing: 0.5px;
+        }
+
+        .scientific-name {
+            font-size: 0.85rem;
+            color: var(--accent-warm);
+            font-style: italic;
+            margin-bottom: 12px;
+            font-weight: normal;
         }
 
         .bird-desc {
@@ -322,6 +330,7 @@
                     <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Downy Woodpecker</h3>
+                        <p class="scientific-name">Dryobates pubescens</p>
                         <p class="bird-desc">The polite guest. Often the smallest and least aggressive visitor at the
                             suet cage.</p>
                     </div>
@@ -330,6 +339,7 @@
                     <img src="optimized_images/red-bellied-woodpecker.jpg" alt="Red-bellied Woodpecker" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-bellied Woodpecker</h3>
+                        <p class="scientific-name">Melanerpes carolinus</p>
                         <p class="bird-desc">Known for their distinct rolling <i>churr</i> call and bright red "mohawk"
                             (despite the name).</p>
                     </div>
@@ -345,6 +355,7 @@
                     <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Black-capped Chickadee</h3>
+                        <p class="scientific-name">Poecile atricapillus</p>
                         <p class="bird-desc">The brave scout. Famously curious and often the first to investigate new
                             feeders.</p>
                     </div>
@@ -353,6 +364,7 @@
                     <img src="optimized_images/titmouse.jpg" alt="Tufted Titmouse" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Tufted Titmouse</h3>
+                        <p class="scientific-name">Baeolophus bicolor</p>
                         <p class="bird-desc">The cheeky cousin to the Chickadee, distinguished by a gray crest and large
                             black eyes.</p>
                     </div>
@@ -361,6 +373,7 @@
                     <img src="optimized_images/nuthatch.jpg" alt="Red-breasted Nuthatch" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-breasted Nuthatch</h3>
+                        <p class="scientific-name">Sitta canadensis</p>
                         <p class="bird-desc">The acrobat. One of the few birds that can walk head-first <em>down</em> a
                             tree trunk.</p>
                     </div>
@@ -376,6 +389,7 @@
                     <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Northern Cardinal</h3>
+                        <p class="scientific-name">Cardinalis cardinalis</p>
                         <p class="bird-desc">Iconic. The male’s brilliant red against white snow is a classic winter
                             sight.</p>
                     </div>
@@ -384,6 +398,7 @@
                     <img src="optimized_images/jay.jpg" alt="Blue Jay" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Blue Jay</h3>
+                        <p class="scientific-name">Cyanocitta cristata</p>
                         <p class="bird-desc">The neighborhood watch. Smart and loud, often mimicking hawks to clear the
                             feeder.</p>
                     </div>
@@ -392,6 +407,7 @@
                     <img src="optimized_images/robin.jpg" alt="American Robin" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">American Robin</h3>
+                        <p class="scientific-name">Turdus migratorius</p>
                         <p class="bird-desc">The sign of spring. Famous for their cocked-head listening posture while
                             hunting worms.</p>
                     </div>
@@ -407,6 +423,7 @@
                     <img src="optimized_images/junco.jpg" alt="Dark-eyed Junco" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Dark-eyed Junco</h3>
+                        <p class="scientific-name">Junco hyemalis</p>
                         <p class="bird-desc">The "Snowbird." They prefer hopping around the base of the feeder to clean
                             up dropped seeds.</p>
                     </div>
@@ -415,6 +432,7 @@
                     <img src="optimized_images/wren.jpg" alt="Carolina Wren" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Carolina Wren</h3>
+                        <p class="scientific-name">Thryothorus ludovicianus</p>
                         <p class="bird-desc">The loudmouth. A tiny, round bird with an incredibly loud
                             "teakettle-teakettle" song.</p>
                     </div>
