feat: add bird diet information to bird cards and implement associated styling

--- a/birds/index.html
+++ b/birds/index.html
@@ -143,6 +143,21 @@
             font-weight: normal;
         }
 
+        .bird-diet {
+            font-size: 0.85rem;
+            color: var(--primary-light);
+            margin-top: 15px;
+            font-weight: 500;
+            background: rgba(45, 122, 74, 0.08);
+            padding: 8px 12px;
+            border-radius: 8px;
+            display: inline-block;
+        }
+
+        .bird-diet strong {
+            color: var(--primary-dark);
+        }
+
         .bird-desc {
             font-size: 0.95rem;
             color: var(--text-light);
@@ -333,6 +348,7 @@
                         <p class="scientific-name">Dryobates pubescens</p>
                         <p class="bird-desc">The polite guest. Often the smallest and least aggressive visitor at the
                             suet cage.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Suet, sunflower seeds</p>
                     </div>
                 </article>
                 <article class="card">
@@ -342,6 +358,7 @@
                         <p class="scientific-name">Melanerpes carolinus</p>
                         <p class="bird-desc">Known for their distinct rolling <i>churr</i> call and bright red "mohawk"
                             (despite the name).</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Suet, peanuts, oranges</p>
                     </div>
                 </article>
             </div>
@@ -358,6 +375,7 @@
                         <p class="scientific-name">Poecile atricapillus</p>
                         <p class="bird-desc">The brave scout. Famously curious and often the first to investigate new
                             feeders.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Black oil sunflower, suet</p>
                     </div>
                 </article>
                 <article class="card">
@@ -367,6 +385,7 @@
                         <p class="scientific-name">Baeolophus bicolor</p>
                         <p class="bird-desc">The cheeky cousin to the Chickadee, distinguished by a gray crest and large
                             black eyes.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Sunflower seeds, peanuts</p>
                     </div>
                 </article>
                 <article class="card">
@@ -376,6 +395,7 @@
                         <p class="scientific-name">Sitta canadensis</p>
                         <p class="bird-desc">The acrobat. One of the few birds that can walk head-first <em>down</em> a
                             tree trunk.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Suet, peanuts, sunflower hearts</p>
                     </div>
                 </article>
             </div>
@@ -392,6 +412,7 @@
                         <p class="scientific-name">Cardinalis cardinalis</p>
                         <p class="bird-desc">Iconic. The male’s brilliant red against white snow is a classic winter
                             sight.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Sunflower seeds, safflower</p>
                     </div>
                 </article>
                 <article class="card">
@@ -401,6 +422,7 @@
                         <p class="scientific-name">Cyanocitta cristata</p>
                         <p class="bird-desc">The neighborhood watch. Smart and loud, often mimicking hawks to clear the
                             feeder.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Whole peanuts, suet</p>
                     </div>
                 </article>
                 <article class="card">
@@ -410,6 +432,7 @@
                         <p class="scientific-name">Turdus migratorius</p>
                         <p class="bird-desc">The sign of spring. Famous for their cocked-head listening posture while
                             hunting worms.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Mealworms, fruit, berries</p>
                     </div>
                 </article>
             </div>
@@ -426,6 +449,7 @@
                         <p class="scientific-name">Junco hyemalis</p>
                         <p class="bird-desc">The "Snowbird." They prefer hopping around the base of the feeder to clean
                             up dropped seeds.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> White millet, sunflower chips</p>
                     </div>
                 </article>
                 <article class="card">
@@ -435,6 +459,7 @@
                         <p class="scientific-name">Thryothorus ludovicianus</p>
                         <p class="bird-desc">The loudmouth. A tiny, round bird with an incredibly loud
                             "teakettle-teakettle" song.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Mealworms, suet, peanuts</p>
                     </div>
                 </article>
             </div>
