feat: Add "Boring Birds" section with House Sparrow, House Finch, and Mourning Dove cards and images, and remove modal keyboard hint CSS.

--- a/birds/index.html
+++ b/birds/index.html
@@ -253,20 +253,6 @@
             transform: scale(1.1);
         }
 
-        /* Keyboard hint */
-        .modal::after {
-            content: '← Press arrow keys to navigate →';
-            position: absolute;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: var(--accent-warm);
-            font-size: 0.9rem;
-            opacity: 0.7;
-            font-style: italic;
-        }
-
-
 
         /* Back to Top */
         .back-to-top {
@@ -460,6 +446,43 @@
                         <p class="bird-desc">The loudmouth. A tiny, round bird with an incredibly loud
                             "teakettle-teakettle" song.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Mealworms, suet, peanuts</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- GROUP 5: Boring Birds -->
+        <section class="category-section">
+            <h2 class="category-title">Boring Birds</h2>
+            <div class="card-grid">
+                <article class="card">
+                    <img src="optimized_images/house-sparrow.jpg" alt="House Sparrow" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">House Sparrow</h3>
+                        <p class="scientific-name">Passer domesticus</p>
+                        <p class="bird-desc">The ubiquitous city dweller. Often found in large, noisy flocks taking over
+                            bushes.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Grains, seeds, scraps</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/house-finch.jpg" alt="House Finch" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">House Finch</h3>
+                        <p class="scientific-name">Haemorhous mexicanus</p>
+                        <p class="bird-desc">A common garden visitor. Their cheery warbling song is a staple of suburban
+                            neighborhoods.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Sunflower seeds, thistle</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/mourning-dove.jpg" alt="Mourning Dove" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Mourning Dove</h3>
+                        <p class="scientific-name">Zenaida macroura</p>
+                        <p class="bird-desc">The peaceful coo-er. Known for their whistling wings as they take flight
+                            and bobbing heads.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Millet, cracked corn</p>
                     </div>
                 </article>
             </div>
