feat: Add starling and grackle birds to the website, and update image optimization to fit precise 2816x1536 dimensions with higher JPEG quality.

--- a/birds/index.html
+++ b/birds/index.html
@@ -487,6 +487,33 @@
                 </article>
             </div>
         </section>
+
+        <!-- GROUP 6: The Uninvited Guests -->
+        <section class="category-section">
+            <h2 class="category-title">The Uninvited Guests</h2>
+            <div class="card-grid">
+                <article class="card">
+                    <img src="optimized_images/starling.jpg" alt="European Starling" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">European Starling</h3>
+                        <p class="scientific-name">Sturnus vulgaris</p>
+                        <p class="bird-desc">The iridescent invader. They swarm feeders in clouds and mimic other birds.
+                        </p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Suet, everything</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/grackle.jpg" alt="Common Grackle" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Common Grackle</h3>
+                        <p class="scientific-name">Quiscalus quiscula</p>
+                        <p class="bird-desc">The golden-eyed glare. Large, loud, and iridescent, they often dominate the
+                            bird bath.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Corn, sunflower, anything edible</p>
+                    </div>
+                </article>
+            </div>
+        </section>
     </div>
 
     <!-- Image Modal -->
