feat: rename bird category to 'Pests' and update descriptions for European Starling and Common Grackle.

--- a/birds/index.html
+++ b/birds/index.html
@@ -488,17 +488,17 @@
             </div>
         </section>
 
-        <!-- GROUP 6: The Uninvited Guests -->
+        <!-- GROUP 6: Pests -->
         <section class="category-section">
-            <h2 class="category-title">The Uninvited Guests</h2>
+            <h2 class="category-title">Pests</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/starling.jpg" alt="European Starling" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">European Starling</h3>
                         <p class="scientific-name">Sturnus vulgaris</p>
-                        <p class="bird-desc">The iridescent invader. They swarm feeders in clouds and mimic other birds.
-                        </p>
+                        <p class="bird-desc">Backyard bully. These iridescent birds arrive in noisy flocks, clearing out
+                            feeders and driving away smaller visitors.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Suet, everything</p>
                     </div>
                 </article>
@@ -507,8 +507,8 @@
                     <div class="card-content">
                         <h3 class="bird-name">Common Grackle</h3>
                         <p class="scientific-name">Quiscalus quiscula</p>
-                        <p class="bird-desc">The golden-eyed glare. Large, loud, and iridescent, they often dominate the
-                            bird bath.</p>
+                        <p class="bird-desc">Large and iridescent with piercing yellow eyes. They arrive in noisy flocks
+                            and will dominate the yard.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Corn, sunflower, anything edible</p>
                     </div>
                 </article>
