style: Shorten bird category titles and remove unnecessary blank lines.

--- a/birds/index.html
+++ b/birds/index.html
@@ -253,7 +253,6 @@
             transform: scale(1.1);
         }
 
-
         /* Back to Top */
         .back-to-top {
             position: fixed;
@@ -321,11 +320,9 @@
             <p class="subtitle">A curated guide to our local avian visitors</p>
         </header>
 
-
-
         <!-- GROUP 1: Woodpecker Duo -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Legendary" data-color="#ff8000">The Woodpecker Duo</h2>
+            <h2 class="category-title" data-loot="Legendary" data-color="#ff8000">Woodpecker Duo</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
@@ -352,7 +349,7 @@
 
         <!-- GROUP 2: The Winter Guild -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Epic" data-color="#a335ee">The Winter Guild</h2>
+            <h2 class="category-title" data-loot="Epic" data-color="#a335ee">Winter Guild</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee" loading="lazy">
@@ -387,9 +384,9 @@
             </div>
         </section>
 
-        <!-- GROUP 3: The Bold & Colorful -->
+        <!-- GROUP 3: Bold & Colorful -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Uncommon" data-color="#1eff00">The Bold & Colorful</h2>
+            <h2 class="category-title" data-loot="Uncommon" data-color="#1eff00">Bold & Colorful</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
@@ -424,9 +421,9 @@
             </div>
         </section>
 
-        <!-- GROUP 4: The Ground Crew -->
+        <!-- GROUP 4: Ground Crew -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Rare" data-color="#0070dd">The Ground Crew</h2>
+            <h2 class="category-title" data-loot="Rare" data-color="#0070dd">Ground Crew</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/junco.jpg" alt="Dark-eyed Junco" loading="lazy">
