feat: Update category title colors and add 'The' prefix to some titles.

--- a/birds/index.html
+++ b/birds/index.html
@@ -322,7 +322,7 @@
 
         <!-- GROUP 1: Woodpecker Duo -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Legendary" data-color="#ff8000">Woodpecker Duo</h2>
+            <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">The Woodpecker Duo</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
@@ -349,7 +349,7 @@
 
         <!-- GROUP 2: The Winter Guild -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Epic" data-color="#a335ee">Winter Guild</h2>
+            <h2 class="category-title" data-loot="Epic" data-color="#b39eb5">The Winter Guild</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee" loading="lazy">
@@ -386,7 +386,7 @@
 
         <!-- GROUP 3: Bold & Colorful -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Uncommon" data-color="#1eff00">Bold & Colorful</h2>
+            <h2 class="category-title" data-loot="Uncommon" data-color="#77dd77">The Bold & Colorful</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
@@ -423,7 +423,7 @@
 
         <!-- GROUP 4: Ground Crew -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Rare" data-color="#0070dd">Ground Crew</h2>
+            <h2 class="category-title" data-loot="Rare" data-color="#aec6cf">Ground Crew</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/junco.jpg" alt="Dark-eyed Junco" loading="lazy">
@@ -450,7 +450,7 @@
 
         <!-- GROUP 5: Boring Birds -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Common" data-color="#9d9d9d">Boring Birds</h2>
+            <h2 class="category-title" data-loot="Common" data-color="#cfcfc4">Boring Birds</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/house-sparrow.jpg" alt="House Sparrow" loading="lazy">
@@ -487,7 +487,7 @@
 
         <!-- GROUP 6: Pests -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Cursed" data-color="#ff0000">Pests</h2>
+            <h2 class="category-title" data-loot="Cursed" data-color="#ff6961">Pests</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/starling.jpg" alt="European Starling" loading="lazy">
