style: Remove "The" prefix from category titles for conciseness.

--- a/birds/index.html
+++ b/birds/index.html
@@ -322,7 +322,7 @@
 
         <!-- GROUP 1: Woodpecker Duo -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">The Woodpecker Duo</h2>
+            <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">Woodpecker Duo</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
@@ -349,7 +349,7 @@
 
         <!-- GROUP 2: The Winter Guild -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Epic" data-color="#b39eb5">The Winter Guild</h2>
+            <h2 class="category-title" data-loot="Epic" data-color="#b39eb5">Winter Guild</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee" loading="lazy">
@@ -386,7 +386,7 @@
 
         <!-- GROUP 3: Bold & Colorful -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Uncommon" data-color="#77dd77">The Bold & Colorful</h2>
+            <h2 class="category-title" data-loot="Uncommon" data-color="#77dd77">Bold & Colorful</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
